add user functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <h4>if you're here to look:</h4>
     <ul>
         <br><br>
-        <li>click on ALl Scenes</li>
+        <li>click on Scenes Overview</li>
         <li>navigate scenes from there</li>
         <br>
         <div>Remember! you can only create and edit after signing in!</div>
