--- a/views/characters/index.ejs
+++ b/views/characters/index.ejs
@@ -1,9 +1,11 @@
 <%- include('../partials/header') %>
-<% console.log(characters) %>
 <% for (let character of characters) { %>
-    <h4><%= character.name %> <a href="/characters/<%= character._id %>"><button>View</button></a></h4> 
-
-        <h5><%= character.description %></h5>
+    <h4><% if(user?._id.equals(character.user)) { %>
+            <form class="delete" action="/characters/<%= character.id %>?_method=DELETE" method="POST"><button type="submit">X</button></form>
+        <% } %>
+        <%= character.name %> <a href="/characters/<%= character._id %>"><button>View</button></a>
+    </h4> 
+    <h5><%= character.description %></h5>
 
     <br><br><br>
     <% } %>
