--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,4 +16,4 @@
         <br>
         <div>Remember! you can only create and edit after signing in!</div>
     </ul>
-\<%- include('./partials/footer') %>
+<%- include('./partials/footer') %>
