--- a/views/scenes/new.ejs
+++ b/views/scenes/new.ejs
@@ -7,7 +7,7 @@
     <input type="text" name="description">
 
 <br><br>
-    <label>Places/Things of Note</label>
+    <label>Places/Things of Note (separate with commas)</label>
     <input type="text" name="objects">
 
 <br><br>
@@ -16,12 +16,12 @@
 
 <br><br>
     <label>Affiliation</label>
-    <select name="Affiliation">
+    <select name="affiliationBeg">
         <option value="lawful">Lawful</option>
         <option value="neutral">Neutral</option>
         <option value="chaotic">Chaotic</option>
     </select>
-    <select name="Affiliation-end">
+    <select name="affiliationEnd">
         <option value="good">Good</option>
         <option value="neutral">Neutral</option>
         <option value="evil">Evil</option>
