--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,10 @@
   </head>
   <body>
     <nav>
-      <img src="/images/camera.svg">
+      <% if (user) { %><div class="logged-in"><img class="profile"src=<%= user.avatar %>> 
+      <a href="/logout">Log Out</a></div>
+      <br>
+      <% } %>
         <a href="/scenes" <%- title === 'Master Scenes' ? 'class="active"' : '' %>>Scenes Overview</a>
         &nbsp | &nbsp
         <% if (user) { %>
@@ -15,12 +18,9 @@
         <a href="/characters" <%- title === 'All Characters' ? 'class="active"' : '' %>>View All Characters</a>
         &nbsp | &nbsp
         <a href="/characters/new" <%- title === 'Create Character' ? 'class="active"' : '' %>>Create Character</a>
-        &nbsp | &nbsp
-        <a href="/logout">Log Out</a>
-        &nbsp | &nbsp
 
         <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <a href="/auth/google" class="login">LOG IN&nbsp<img src="https://i.imgur.com/FHjYyi0.png"></a>
         <% } %>
 
 
