--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,20 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url(../images/brown-leather-texture-background.jpg);
+}
+nav {
+  background-color: #291e04cc;
+  align-items: center;
 }
 
-a {
-  color: #00B7FF;
+nav>a {
+  color: #ededed;
+  text-decoration: none;
+}
+
+nav>a:hover {
+  background-color: #c69117f9;
 }
 
 
@@ -18,18 +28,107 @@ a {
 
 .profile {
   border-radius: 50%;
-  height: 2rem;
+  height: 1.5rem;
 }
 
-.logged-in {
-  text-align: right;
-}
 
 .scene {
-  border: 2px solid black;
+  background-color: #291e04cc;;
   justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;   
+}
+
+.scene-div {
+  visibility: visible;
+  border: 2px solid brown;
+  background-color: white;
+  height: 15rem;
+  width: 15rem;
+  border-radius: 20%;
+  padding: 1rem;
+}
+.scene-div:hover {
+  background-color: #cac6c6;
+}
+
+.scene-div:click {
+  background-color: #929191;
 }
 
 .scene-title {
-  
+  text-align: center;
+}
+
+.divider {
+  color: white;
+  font-size: xx-large;
+}
+
+.scene-button {
+  visibility: hidden;
+  border-radius: 20%;
+  height: 15rem;
+  width: 15rem;
+}
+
+.show-scene {
+height: 50rem;
+width: 50rem;
+border-radius: 35%;
+background-color: rgba(191, 195, 202, 0.8); 
+margin: auto;
+text-align: center;
+padding: 1rem;
+}
+
+.show-scene>div {
+  height: 1.4rem;
+  width: 35rem;
+  margin: auto;
+  text-align: left;
+}
+
+
+.show-parent {
+
+}
+
+.show-child {
+size: auto;
+margin: 20rem auto;
+
+}
+
+.show-character {
+  height: 20rem;
+  width: 15rem;
+  background-color: #e6c475f8;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+  font-size: xx-large;
+}
+
+.new {
+  height: 25 rem;
+  width: 25rem;
+  background-color: white;
+  margin: auto;
+  border: 2px solid black;
+  padding: 1rem;
+}
+
+.all-characters {
+  height: 25 rem;
+  width: 50rem;
+  background-color: #483319ef;
+  margin: auto;
+  padding: 1rem;
 }
