--- a/views/scenes/newChild.ejs
+++ b/views/scenes/newChild.ejs
@@ -1,40 +1,41 @@
 <%- include('../partials/header') %>
-<form id="'new-scene" action="/scenes/newChild" method="POST">
-    <label>Name</label>
-    <input type="text" name="name">
-<br><br>
-    <label>Brief Description</label>
-    <input type="text" name="description">
-
-<br><br>
-    <label>Places/Things of Note</label>
-    <input type="text" name="objects">
-
-<br><br>
-    <label>Conditions</label>
-    <input type="text" name="conditions">
-
-<br><br>
-    <label>Affiliation</label>
-    <select name="affiliationBeg">
-        <option value="lawful">Lawful</option>
-        <option value="neutral">Neutral</option>
-        <option value="chaotic">Chaotic</option>
-    </select>
-    <select name="affiliationEnd">
-        <option value="good">Good</option>
-        <option value="neutral">Neutral</option>
-        <option value="evil">Evil</option>
-    </select>
+<section class="new">
+    <form id="'new-scene" action="/scenes/newChild" method="POST">
+        <label>Name</label>
+        <input type="text" name="name">
     <br><br>
-    <select name="parentScope" id="parentScope" type="hidden">
-        <option value="<%= parentScene.currentScope %>"></option>
-    </select>
+        <label>Brief Description</label>
+        <input type="text" name="description">
 
-    <input type="submit" value="Add Scene">
+    <br><br>
+        <label>Places/Things of Note</label>
+        <input type="text" name="objects">
 
-</form>
+    <br><br>
+        <label>Conditions</label>
+        <input type="text" name="conditions">
 
+    <br><br>
+        <label>Affiliation</label>
+        <select name="affiliationBeg">
+            <option value="lawful">Lawful</option>
+            <option value="neutral">Neutral</option>
+            <option value="chaotic">Chaotic</option>
+        </select>
+        <select name="affiliationEnd">
+            <option value="good">Good</option>
+            <option value="neutral">Neutral</option>
+            <option value="evil">Evil</option>
+        </select>
+        <br><br>
+        <select name="parentScope" id="parentScope" type="hidden">
+            <option value="<%= parentScene.currentScope %>"></option>
+        </select>
+
+        <input type="submit" value="Add Scene">
+
+    </form>
+</section>
 
 
 
