--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header') %>
+<section class="intro">
 <h3>Your one-stop-shop to craft your world!</h2>
     <br><br><br>
     <h4>if you're here to create:</h4>
@@ -16,4 +17,5 @@
         <br>
         <div>Remember! you can only create and edit after signing in!</div>
     </ul>
+</section>
 <%- include('./partials/footer') %>
