--- a/views/characters/show.ejs
+++ b/views/characters/show.ejs
@@ -3,7 +3,7 @@
 <% let goals = character.goals %>
 <% let affiliation = character.affiliation %>
 <section class="show-character">
-    <div><%= character.description %></div>
+    <div class="description"><%= character.description %></div>
     <br><br>
     <div>Affiliation: <% for (let affil of affiliation) { %>
         <%= affil %> 
@@ -19,6 +19,7 @@
     <%= goal %>, 
     <% } %>
 </div>
+<form action="/characters/<%= character._id %>/edit" method="GET"><button type="submit">Edit</button></form>
 </section>
 
 <%- include('../partials/footer') %>
