--- a/views/scenes/new.ejs
+++ b/views/scenes/new.ejs
@@ -18,11 +18,13 @@
     <br><br>
         <label>Affiliation</label>
         <select name="affiliationBeg">
+            <option></option>
             <option value="lawful">Lawful</option>
             <option value="neutral">Neutral</option>
             <option value="chaotic">Chaotic</option>
         </select>
         <select name="affiliationEnd">
+            <option></option>
             <option value="good">Good</option>
             <option value="neutral">Neutral</option>
             <option value="evil">Evil</option>
