--- a/views/scenes/newChild.ejs
+++ b/views/scenes/newChild.ejs
@@ -18,17 +18,19 @@
     <br><br>
         <label>Affiliation</label>
         <select name="affiliationBeg">
+            <option></option>
             <option value="lawful">Lawful</option>
             <option value="neutral">Neutral</option>
             <option value="chaotic">Chaotic</option>
         </select>
         <select name="affiliationEnd">
+            <option></option>
             <option value="good">Good</option>
             <option value="neutral">Neutral</option>
             <option value="evil">Evil</option>
         </select>
         <br><br>
-        <select name="parentScope" id="parentScope" type="hidden">
+        <select name="parentScope" id="parentScope">
             <option value="<%= parentScene.currentScope %>"></option>
         </select>
 
